--- a/trainer.html
+++ b/trainer.html
@@ -103,10 +103,8 @@
                 
                 <div class="navbar-actions">
                     <a href="kontakt.html" class="btn btn-primary">Jetzt starten</a>
-                    <button class="navbar-toggle" id="navbar-toggle" aria-label="Menü öffnen">
-                        <span></span>
-                        <span></span>
-                        <span></span>
+                    <button class="navbar-toggle" id="navbar-toggle" aria-label="Menü öffnen" aria-expanded="false">
+                        <span class="burger-icon" aria-hidden="true">☰</span>
                     </button>
                 </div>
             </div>
