--- a/kontakt.html
+++ b/kontakt.html
@@ -125,7 +125,7 @@
                         <h1 class="hero-title">Kontakt</h1>
                     </div>
                     <div class="hero-schedule">
-                        <div class="opening-hours-table">
+                        <div class="opening-hours-table mobile-cards">
                             <div class="table-header">
                                 <h3>📅 Wöchentlicher Trainingsplan</h3>
                                 <p>Professionelles Boxtraining für alle Level - 7 Tage die Woche</p>
@@ -188,7 +188,7 @@
                                         <span class="course-item adults">🥊 Erwachsene</span>
                                     </div>
                                     <div class="courses-column" data-day="Samstag" data-time="18:30 – 20:00 Uhr">
-                                        <span class="course-item adults">🥊 Erwachsene</span>
+                                        <span class="course-item"></span>
                                     </div>
                                     <div class="courses-column" data-day="Sonntag" data-time="18:30 – 20:00 Uhr">
                                         <span class="course-item"></span>
@@ -247,7 +247,117 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="table-footer"></div>
+                            <!-- Mobile Card Layout -->
+                            <div class="mobile-schedule-container">
+                                <div class="mobile-schedule-cards">
+                                    <!-- Montag -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Montag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">17:00 – 18:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course kids">👶 Kinder (5 – 11 Jahre)</div>
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">18:30 – 20:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course adults">🥊 Erwachsene</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Dienstag -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Dienstag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">18:30 – 20:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course adults">🥊 Erwachsene</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Mittwoch -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Mittwoch</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">18:30 – 20:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course adults">🥊 Erwachsene</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Donnerstag -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Donnerstag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">17:00 – 18:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course kids">👶 Kinder (5 – 11 Jahre)</div>
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">18:30 – 20:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course adults">🥊 Erwachsene</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Freitag -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Freitag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">18:30 – 20:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course adults">🥊 Erwachsene</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Samstag -->
+                                    <div class="schedule-card">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Samstag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">🕐</span>
+                                                <span class="schedule-time-text">13:00 – 14:00 Uhr</span>
+                                            </div>
+                                            <div class="schedule-course kids">👶 Kinder (5 – 11 Jahre)</div>
+                                        </div>
+                                    </div>
+
+                                    <!-- Sonntag -->
+                                    <div class="schedule-card no-training">
+                                        <div class="schedule-card-header">
+                                            <div class="schedule-day">Sonntag</div>
+                                        </div>
+                                        <div class="schedule-courses">
+                                            <div class="schedule-time">
+                                                <span class="schedule-time-icon">📅</span>
+                                                <span class="schedule-time-text">Kein Training</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -544,7 +654,7 @@
                     <a href="agb.html">AGB</a>
                 </div>
                 <p class="footer-copyright">
-                    © 2024 Cologne Boxing Style. Alle Rechte vorbehalten.
+                    &copy; 2024 Cologne Boxing Style. Alle Rechte vorbehalten.
                 </p>
             </div>
         </div>
